<resources>
    <string name="app_name" translatable="false">AppAi</string>
    <string name="action_settings">Settings</string>
    <string name="enter_text">Please enter text</string>
    <string name="enter_text_btn">Enter</string>
    <string name="avatar_description">Avatarai</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="api" translatable="false">Api</string>
    <string name="api_key" translatable="false">Api Key</string>
    <string name="stream_mode" translatable="false">Stream Mode</string>
    <string name="user_disc">This is user image</string>
    <string name="OpeninBrowser">Open openAi.com site Browser in app</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="copy_watermark">Getting from AppAi</string>
    <string name="text_copy">Text copied!</string>
    <string name="api_not_correct">You Api Key not correct. Check You Api key. (top right three dots -> settings -> API key)</string>
    <string name="no_intenet">No Internet connection pleeeeeeease turn on intertnet.</string>
    <string name="fatal_error">Fatal Exception. Please dont worry.</string>
    <string name="bot_writting">Bot writting…</string>
    <string name="time_out">Time for Response out</string>
    <string name="save_data">Save your data  from file</string>
    <string name="load_data">Load your data from file</string>
    <string name="settings_prof">This is professional settings.</string>
    <string name="spam_detector">Don\'t spam these buttons! It can damage or break something.</string>
    <string name="instruction_part1">How to get it?</string>
    <string name="instruction_part2">Visit the Openair website -> Learn about GPT-4 -> Try on ChatGPT Plus -> Register or log in.</string>
    <string name="instruction_part3">After that, go to the website to get the key. -> -> Create new secret key write its name (whatever) -> Create new secret key -> copy, paste in the field above.</string>
    <string name="OpeninBrowserKey">Open platform.openai.com/account/api-keys site Browser in app</string>
    <string name="key_key">Key</string>
    <string name="key_edittext">Put Key here</string>
    <string name="from_github">This is a project from Github. Repository of this project is free</string>
    <string name="to_github">To repository</string>
    <string name="gptavatar_descr">GPTAvatar</string>
    <string name="Useravatar_desr">UserAvatar</string>
    <string name="Systemavatar_descr">SystemAvatar</string>
    <string name="api_key_empty">You Api Key empty. Check You Api key. (top right three dots -> settings -> API key)</string>
    <string name="error_tittle">Error</string>
    <string name="error_desc">An error has occurred in the application, should I report it?</string>
    <string name="error_pos">Report</string>
    <string name="error_nega">Cancell</string>
    <string name="error_thanks">Thanks )</string>
    <string name="error_descrs">Describe your problem</string>
    <string name="report_report">Report</string>
    <string name="gptver_name">GPTVersion</string>
    <string name="gptver_basic">Most capable GPT-3.5 model and optimized for chat at 1/10th the cost of text-davinci-003. Will be updated with our latest model iteration 2 weeks after it is released.</string>
    <string name="gptver_16k">Same capabilities as the standard gpt-3.5-turbo model but with 4 times the context.</string>
    <string name="gptver_0613">Snapshot of gpt-3.5-turbo from June 13th 2023 with function calling data. Unlike gpt-3.5-turbo, this model will not receive updates, and will be deprecated 3 months after a new version is released.</string>
    <string name="login_login">Login / Register</string>
    <!-- Strings used for fragments for navigation -->

    <string name="login_email" translatable="false">Email</string>
    <string name="login_password">Password</string>
    <string name="login_with">with games.m2023.ru</string>
    <string name="login_error_email">Email not right</string>
    <string name="login_error_password">Password not rignt</string>
    <string name="login_twoauth">Login using two-factor authentication</string>
    <string name="login_totp">Enter the code from your Totp code generation application:</string>
    <string name="login_codehint">Code</string>
    <string name="login_emailaccept">We have sent an email to your email with a link to the login confirmation:</string>
    <string name="login_check">Check Email accept</string>
    <string name="login_loginlogin">Login</string>
    <string name="login_back">Back</string>
    <string name="request_error">An error occurred during the request, check your internet connection and try again later</string>
    <string name="login_error_code">Code not right</string>
    <string name="login_errorinput_mail">Email not verifered</string>
    <string name="login_verifymail_tittle">Confirm your email</string>
    <string name="login_verifymail_descr">Registration is completed, but confirmation of your mailing address is required, Check your mailbox.</string>
    <string name="login_logout">Log Out</string>
    <string name="login_why">Login / Register to sync your data with games.m2023.ru</string>
    <string name="error_toomanyaccounts_desrr">Similar there are too many accounts created on your phone (more than one). You will have to delete them for this application to work.</string>
    <string name="error_settings">Open Settings</string>
    <string name="error_toomany">You already have account!</string>
    <string name="settings_auto">" You dont need to do that, this happends automatically."</string>
    <string name="settings_debug">Debug Mode</string>
    <string name="sync">Sync Settings</string>
    <string name="sync_auto">Auto Sync</string>
    <string name="sync_int">Sync Interval</string>
    <string name="login_name" translatable="false">games.m2023.ru</string>
    <string name="sync_master">Your Master setting is off.</string>
    <string name="sync_spam">Synchronization failed. You are spamming with this button</string>
    <string name="error_quota">You exceeded your current quota, please check your plan and billing details.</string>
    <string name="error_invreq">It looks like you have exceeded the limit of the allowed chat length for this bot. Click three dots - clear</string>
    <string name="login_notact">You token is not actual. You need to relogin.</string>
    <string name="appupdater_update_available">New update available!</string>
    <string name="appupdater_update_available_description_dialog">Update %1$s is available to download. By downloading the latest update you will get the latest features, improvements and bug fixes for %2$s.</string>
    <string name="appupdater_update_available_description_dialog_before_release_notes">Update %1$s is available to download.\n\nYou can get these new features:\n%2$s</string>
    <string name="appupdater_update_available_description_snackbar">Update %1$s is available!</string>
    <string name="appupdater_update_available_description_notification">Update %1$s of %2$s is available to download</string>
    <string name="appupdater_update_not_available">No updates available</string>
    <string name="appupdater_update_not_available_description">You\'ve got the latest version available of %s!</string>
    <string name="appupdater_btn_update">Update</string>
    <string name="appupdater_btn_disable">Don\'t show again</string>
    <string name="appupdater_btn_dismiss">Dismiss</string>
    <string name="appupdater_channel_name">Update notifications</string>

    <string name="appupdater_channel" translatable="false">appupdater_channel_01</string>
</resources>