<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maserplay.appai.login.LoginVerifyActivity">

    <ScrollView
        android:id="@+id/twofact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_twoauth"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/login_with"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:text="@string/login_totp"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/Totp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:autofillHints="Code"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/login_codehint"
                android:inputType="number"
                android:maxLength="6"
                android:paddingVertical="20dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:text="@string/login_emailaccept"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/checkmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:onClick="emailaccept"
                android:text="@string/login_check"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_errorinput_mail"
                android:visibility="gone" />

            <Button
                android:id="@+id/logintwofac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="loginlogin"
                android:text="@string/login_loginlogin" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>