<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textlatest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tokens_left"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textOr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textlatest"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />
            <LinearLayout
                android:id="@+id/llApi"
                android:layout_width="match_parent"
                android:layout_below="@id/textOr"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TvApi"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/api"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/EdtApi"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="password"
                    android:hint="@string/api_key"
                    android:inputType="textPassword" />

            </LinearLayout>

            <TextView
                android:id="@+id/textV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llApi"
                android:text="@string/instruction_part1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textanother"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textV"
                android:text="@string/instruction_part2"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/inBrowserapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textanother"
                android:text="@string/OpeninBrowser" />
            <TextView
                android:id="@+id/textanoafBr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inBrowserapp"
                android:text="@string/instruction_part3"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/inBrowserappKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textanoafBr"
                android:text="@string/OpeninBrowserKey" />

            <View
                android:id="@+id/vie"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@id/inBrowserappKey"
                android:background="@color/purple_500" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vie"
                android:text="@string/settings_prof"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:text="@string/save_data" />

            <Button
                android:id="@+id/load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/save"
                android:text="@string/load_data" />

            <TextView
                android:id="@+id/spamtv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/load"
                android:text="@string/spam_detector"
                android:textAlignment="center"
                android:textSize="15sp"
                android:visibility="gone" />

            <View
                android:id="@+id/vie2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@id/spamtv"
                android:background="@color/purple_500"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textforKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vie2"
                android:text="@string/key_description"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llKey"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/textforKey"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/TvKey"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/key_key"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/EdtKey"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="password"
                    android:hint="@string/key_edittext"
                    android:inputType="textPassword"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <com.yandex.mobile.ads.banner.BannerAdView
        android:id="@+id/bannerad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>