<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp">


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:stackFromBottom="true"
        android:transcriptMode="normal"/>

    <LinearLayout
        android:id="@+id/llwait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/bot_writting"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:minHeight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/EdTxt"
            android:layout_width="0dp"
            android:minHeight="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="text"
            android:backgroundTint="@color/purple_200"
            android:gravity="top"
            android:hint="@string/enter_text"
            android:inputType="text|textAutoComplete|textCapSentences|textMultiLine" />

        <Button
            android:id="@+id/button_enter"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:enabled="false"
            android:text="@string/enter_text_btn"
            android:textAlignment="center"
            android:onClick="Button_Enter"
            android:textColor="#111"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>